--- a/package.json
+++ b/package.json
@@ -27,15 +27,16 @@
   "author": "Web3 Guild Team",
   "license": "MIT",
   "dependencies": {
-    "telegraf": "^4.15.6",
-    "mongoose": "^8.0.3",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^8.0.3",
+    "telegraf": "^4.15.6"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
     "concurrently": "^8.2.2",
-    "eslint": "^8.55.0"
+    "eslint": "^8.55.0",
+    "mocha": "^11.6.0",
+    "nodemon": "^3.0.2"
   },
   "engines": {
     "node": ">=18.0.0"
