--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/web3guild/telegram-bot"
+    "url": "git+https://github.com/web3guild/telegram-bot.git"
   },
   "bugs": {
     "url": "https://github.com/web3guild/telegram-bot/issues"
